bema-clinicals/src/components/nav/Navigation.module.css
.navigation-desktop {
  display: block;
}

.navigation-mobile {
  display: none;
}

.navigation-primary {
  margin: 0;
  padding: 0;
  list-style-type: none;
  width: 106.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-left: 4rem;
}

.navigation-primary__item {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

.nav-icon {
  fill: var(--light-blue);
}

.nav-span {
  font-weight: 500;
  font-size: 1.4rem;
  line-height: 2.5rem;
  color: var(--light-gray);
}

.nav-span_phone {
  margin-left: 0.46rem;
}

.nav-span_email {
  margin-left: 1.8rem;
}

.icon-email {
  margin-left: 1.9rem;
  fill: var(--light-blue);
}

.navigation-primary--sub {
  margin: 0;
  padding: 0;
  list-style-type: none;
  margin-left: 1.94rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  padding: 0px 1.2rem;

  width: 53.2rem;
  height: 4.6rem;

  background: var(--light-white);
}

.navigation-primary--sub__item {
  font-weight: 400;
  font-size: 1.4rem;
  line-height: 2rem;
  color: var(--pure-black);
}

.navigation-primary--sub__item {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 0.5rem;
}

.dropdown-menu {
  display: none;
}

.dropdown-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.dropdown-list .dropdown-list_item:not(:last-child) {
  margin-bottom: 0.5rem;
}

.navigation-primary--sub__item .dropdown-menu .dropdown-list {
  padding: 0.5rem 1rem 1rem 4rem;
}

.navigation-primary--sub__item:hover .dropdown-menu {
  display: block;
  width: 16rem;
  height: 12rem;
  padding: 1rem 0.5rem;
  background: var(--light-white);
  position: absolute;
  top: 2rem;
  left: -4.5rem;
  z-index: 5;
}

.navigation-secondary {
  margin: 0;
  padding: 0;
  list-style-type: none;
  width: 106.4rem;
  height: 4.6rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-left: 4rem;
  gap: 4rem;
}

.navigation-secondary__item {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 0.5rem;

  font-weight: 400;
  font-size: 1.4rem;
  line-height: 2rem;

  color: var(--pure-black);
}

.navigation-secondary__item:hover .dropdown-menu {
  display: block;

  width: 12rem;
  height: 12rem;
  margin: 0;
  padding: 0;
  list-style-type: none;
  background: var(--light-white);
  position: absolute;
  top: 2rem;
  left: -1.6rem;
  z-index: 5;
}

.menu-bar {
  display: none;
}

.menu-label {
  display: none;
}

.navigation-secondary__item .dropdown-menu .dropdown-list {
  padding: 1rem 1.5rem;
}

@media (max-width: 56.25em) {
  .navigation-primary {
    width: 100%;
  }

  .navigation-primary--sub {
    width: 50%;
  }
  .navigation-secondary {
    width: 100%;
  }
}

@media (max-width: 37.5em) {
  .navigation-desktop {
    display: none;
  }

  .navigation-mobile {
    display: block;
    position: relative;
  }

  .primary-navigation-mobile {
    display: none;
    width: 30rem;
    height: auto;
    padding: 3rem 5rem;
    list-style-type: none;
    position: absolute;
    top: 6.5rem;
    left: -19rem;
    background-color: var(--light-white);
  }

  .primary-navigation-mobile__item {
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 2rem;
    color: var(--pure-black);
  }

  .primary-navigation-mobile__item:not(:last-child) {
    margin-bottom: 1.5rem;
  }

  .primary-navigation-mobile__item--drop {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 0.8rem;
  }

  .menu-label {
    display: initial;
    font-weight: 400;
    font-size: 1.5rem;
    line-height: 2rem;
    color: var(--pure-black);
    padding-right: 5rem;
  }

  .menu-bar:checked ~ .primary-navigation-mobile {
    display: initial;
  }
}

